[project]
name = "sanctuary-map"
version = "0.1.0"
description = "Health-based geographic exclusion mapper for finding safe residential zones in San Diego, CA"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pyrosm",           # Read .osm.pbf files directly into GeoDataFrames
    "geopandas",        # Core spatial operations: buffers, joins, unions
    "shapely",          # Geometry primitives and operations
    "folium",           # Interactive Leaflet maps in the browser (dev/debug)
    "lonboard",         # GPU-accelerated large-dataset visualization (primary)
    "contextily",       # Basemap tiles for static plots
    "pandas",           # Tabular data handling
    "pyarrow",          # Required by lonboard for efficient data transfer
    "numpy",            # Numerical operations
    "requests",         # For fetching external data (FAA shapefiles, etc.)
    "matplotlib",       # Static plotting and quick sanity checks
    "tqdm",             # Progress bars for large PBF processing
    "pyogrio",          # Fast vector I/O backend for geopandas
]

[project.optional-dependencies]
dev = [
    "jupyterlab",       # Notebook environment for iterative map building
    "ipywidgets",       # Widget support for lonboard in Jupyter
    "black",            # Code formatter
    "ruff",             # Fast linter
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyterlab",
    "ipywidgets",
    "black",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
